# pytdlib

./: .gitignore  CMakeLists.txt  README.rst  setup.py
pytdlib/: __init__.py  json_client.py
src/wrappers/td/: td_api_wrapper.cpp
src/wrappers/telegram/: ClientActor_wrapper.cpp  Client_wrapper.cpp
src/wrappers/tl/: TlObject_wrapper.cpp
